--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="verification" content="tiktok-developers-site-verification=TWnjGVpKjpqzYDXQlsWFAPaBfJL3PfD3">
     <title>Terms of Service</title>
     <style>
         body {
